--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -107,6 +108,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -137,6 +139,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -167,6 +170,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -197,6 +201,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -227,6 +232,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -257,6 +263,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -287,6 +294,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -317,6 +325,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -347,6 +356,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -377,6 +387,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -407,6 +418,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -437,6 +449,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -467,6 +480,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -497,6 +511,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
@@ -527,6 +542,7 @@
                 </div>
                 <!-------------------->
                 <div class="bottom-bar">
+                    <img class="bottom-bar__avatar" alt="ava">
                     <a class="bottom-bar__link-web" href="#">lorem ipsum dolor.</a>
                     <div class="bottom-bar__link-box">
                         <a class="bottom-bar__link-download" href="#">
