--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,9 @@
             <div class="dropdown-wrap">
               <h3 class="dropdown-text">Выпадающий список с выбором доски</h3>
               <ul class="dropdown-item">
-                <li class="dropdown-list"><a href="#" class="dropdown-link">Доска 1</a></li>
-                <li class="dropdown-list"><a href="#" class="dropdown-link">Доска 2</a></li>
-                <li class="dropdown-list"><a href="#" class="dropdown-link">Доска 3</a></li>
+                <li class="dropdown-list dropdown-list1"><a href="#" class="dropdown-link">Доска 1</a></li>
+                <li class="dropdown-list dropdown-list2"><a href="#" class="dropdown-link">Доска 2</a></li>
+                <li class="dropdown-list dropdown-list3"><a href="#" class="dropdown-link">Доска 3</a></li>
               </ul>
             </div>
           </div>
@@ -171,7 +171,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -193,14 +193,14 @@
               </div>
             </div>
           </div>
-          <div class="dropdown-content" id="myDropdown">
+          <!-- <div class="dropdown-content" id="myDropdown">
             <div class="dropdown-button">
             <div class="dropdown-item">
             <div class="dropdown-list"><a class="dropdown-content__add">Добавить на доску</a></div>
             <div class="dropdown-list"><a class="dropdown-content__report">Пожаловаться</a></div>
-            </div>
-          </div>
-          </div>
+            </div> -->
+          <!-- </div>
+          </div> -->
         </div>
         <div class="card card_medium">
           <div class="hover-zone">
@@ -231,7 +231,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -283,7 +283,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -335,7 +335,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -387,7 +387,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -439,7 +439,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -491,7 +491,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -543,7 +543,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -595,7 +595,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -647,7 +647,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -699,7 +699,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -751,7 +751,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -803,7 +803,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -855,7 +855,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -907,7 +907,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -959,7 +959,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a class="bottom-bar__link-more" href="#">
+                <a class="bottom-bar__link-more">
                   <svg
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns="http://www.w3.org/2000/svg"
@@ -1119,19 +1119,19 @@
                   <h3 class="ut-table-title">Добавить на доску</h3>
               </div>
               <div class="ut-table-center">
-                  <div class="ut-table-items">
+                  <!-- <div class="ut-table-items ut-table-items1">
                       <div class="ut-table-items__check">
                           <input class="ut-table-items__check-inp" name="appeal" type="radio" id="spam">
                           <label class="ut-table-items__cause-label" for="spam">Доска 1</label>
                       </div>
-                  </div>
-                  <div class="ut-table-items">
+                  </div> -->
+                  <div class="ut-table-items ut-table-items2">
                       <div class="ut-table-items__check">
                           <input class="ut-table-items__check-inp" name="appeal" type="radio" id="nudity">
                           <label class="ut-table-items__cause-label" for="nudity">Доска 2</label>
                       </div>
                     </div>
-                    <div class="ut-table-items">
+                    <div class="ut-table-items ut-table-items3">
                       <div class="ut-table-items__check">
                           <input class="ut-table-items__check-inp" name="appeal" type="radio" id="self-harm">
                           <label class="ut-table-items__cause-label" for="self-harm">Доска 3</label>
@@ -1142,9 +1142,8 @@
               </div>
           </form>
                   
- 
     </section>
     <script type="module" src="js/script.js"></script>
-    <script src="js/dropdown-list.js"></script>
+    <script type="module" src="js/dropdown-list.js"></script>
   </body>
 </html>
