--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <link rel="icon" href="images/favicon.png" sizes="32x32" />
     <link rel="icon" href="images/favicon.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="images/favicon.png" />
-    <link rel="stylesheet" href="./scss/menu.scss" />
-    <link rel="stylesheet" href="./scss/main.scss" />
-    <link rel="stylesheet" href="./scss/dropdown-list.scss" />
-    <link rel="stylesheet" href="./scss/modal-complain.scss">
+    <link rel="stylesheet" href="scss/menu.scss" />
+    <link rel="stylesheet" href="scss/main.scss" />
+    <link rel="stylesheet" href="scss/dropdown-list.scss" />
+    <link rel="stylesheet" href="scss/modal-complain.scss">
     <title>Pinterest</title>
   </head>
   <body>
